# ptoon

./: .env.example  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  PUBLISHING.md  PYPI_TESTING_REPORT.md  README.md  SPEC.md  VALIDATION_REPORT.md  VERTEX_AI_CHANGES.md  VERTEX_AI_QUICK_START.md  pyproject.toml  test_pypi_integration.py
.github/workflows/: docs.yml  integration.yml  publish.yml  test.yml
benchmarks/: README.md  __init__.py  __main__.py  datasets.py  memory_benchmark.py  realworld_benchmark.py  run_benchmarks.py  speed_benchmark.py  stress_benchmark.py  test_timeout_manual.py  token_efficiency.py  utils.py
benchmarks/data/realworld/: README.md  github_commit_history.json  github_issue_detail.json  github_pull_request.json  github_repo_list.json  github_user_profile.json  graphql_nested_query.json  graphql_pagination.json  graphql_union_types.json  jsonld_activity_streams.json  jsonld_product_catalog.json  jsonld_schema_org.json  nasdaq_timeseries_1h.json  openapi_github.json  openapi_petstore.json  openapi_stripe.json  rest_pagination_cursor.json  rest_pagination_link_header.json  rest_pagination_offset.json
benchmarks/data/realworld/nasdaq-cme-future-nq/: NQ_in_2_hour.csv  NQ_in_30_minute.csv  NQ_in_3_hour.csv  NQ_in_3_minute.csv  NQ_in_45_minute.csv  NQ_in_4_hour.csv  NQ_in_monthly.csv
benchmarks/llm_accuracy/: __init__.py  __main__.py  compare.py  evaluate.py  pricing.py  questions.py  realworld_datasets.py  realworld_questions.py  report.py  types.py  validation.py
benchmarks/llm_accuracy/providers/: __init__.py  openai_provider.py  vertex_provider.py
benchmarks/results/: README.md  memory-benchmark.md  realworld-benchmark.md  speed-benchmark.md  token-efficiency.md
benchmarks/results/llm_accuracy/: comparison-20251031-151615.md  comparison-20251031-153439.md  comparison-20251031-154046.md  comparison-20251031-191111.md  comparison-20251031-191351.md  comparison-20251031-191903.md  comparison-20251031-192234.md  comparison-20251031-192340.md  comparison-20251031-194059.md  raw-results-20251031-151615.json  raw-results-20251031-153439.json  raw-results-20251031-153804.json  raw-results-20251031-153855.json  raw-results-20251031-191111.json  raw-results-20251031-191351.json  raw-results-20251031-191903.json  raw-results-20251031-192234.json  raw-results-20251031-192340.json  raw-results-20251031-194059.json  raw-results.json  report-20251031-151615.md  report-20251031-153439.md  report-20251031-154046.md  report-20251031-191111.md  report-20251031-191351.md  report-20251031-191903.md  report-20251031-192234.md  report-20251031-192340.md  report-20251031-194059.md  report.md  summary-20251031-151615.json  summary-20251031-153439.json  summary-20251031-153804.json  summary-20251031-153855.json  summary-20251031-154046.json  summary-20251031-191111.json  summary-20251031-191351.json  summary-20251031-191903.json  summary-20251031-192234.json  summary-20251031-192340.json  (+2 more)
docs/: benchmarks.rst  changelog.rst  conf.py  contributing.rst  faq.rst  index.rst  requirements.txt  troubleshooting.rst  vertex-ai-setup.md
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/api/: core.rst  decoder.rst  encoder.rst  types.rst  utils.rst
docs/guides/: data_restructuring.rst  encoding_options.rst  error_handling.rst  streaming_responses.rst  token_optimization.rst
docs/integrations/: anthropic.rst  custom_clients.rst  google_ai.rst  openai.rst  overview.rst
docs/user_guide/: core_api.rst  format_specification.rst  installation.rst  performance_tips.rst  quickstart.rst
examples/: .env.example  README.md  __init__.py  better_patterns_demo.py  openai_integration.py
ptoon/: __init__.py  constants.py  decoder.py  encoder.py  logging_config.py  normalize.py  primitives.py  types.py  utils.py  writer.py
pytoon/: __init__.py  decoder.py  encoder.py  logging_config.py  normalize.py  primitives.py  types.py  utils.py
pytoon/openai/: __init__.py  _client.py  _utils.py
tests/: __init__.py  conftest.py  test_api_validation.py  test_arrays_objects.py  test_arrays_of_arrays.py  test_arrays_primitives.py  test_benchmark_timeout.py  test_complex_nesting.py  test_complex_structures.py  test_coverage_boost.py  test_decoder_advanced_edge_cases.py  test_decoder_edge_cases.py  test_decoder_strictness.py  test_delimiter_options.py  test_encoder_edge_cases.py  test_final_coverage_push.py  test_formatting.py  test_length_marker.py  test_logging_config.py  test_nested_array_robustness.py  test_non_json_types.py  test_normalize_edge_cases.py  test_objects.py  test_perf_smoke.py  test_primitives.py  test_root_arrays.py  test_roundtrip.py  test_roundtrip_large.py  test_utils.py
tests/fixtures/: decoder_strictness.json
toon/: __init__.py  constants.py  decoder.py  encoder.py  normalize.py  primitives.py  types.py  writer.py
