[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytoon"
version = "0.0.1"
description = "Token-Oriented Object Notation - A Python implementation optimized for LLM token efficiency."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "TOON Contributors" }]
keywords = ["llm", "token", "serialization", "encoding", "ai", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "black>=25.9.0",
    "ruff>=0.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
]
benchmark = [
    "tiktoken>=0.12.0,<1.0.0",
    "faker>=37.11.0,<40.0.0",
]
examples = [
    "openai>=1.0.0,<2.0.0",
    "tiktoken>=0.12.0,<1.0.0",
]
# Install all optional dependencies
all = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "faker>=37.11.0,<40.0.0",
    "openai>=1.0.0,<2.0.0",
]

[project.scripts]
toon-benchmark = "benchmarks.run_benchmarks:main"
toon-llm-benchmark = "benchmarks.llm_accuracy.__main__:main"

[tool.hatchling.build.targets.wheel]
packages = ["pytoon", "benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short", "-m", "not integration"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring API access (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["pytoon"]
omit = ["tests/*", "benchmarks/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
    "B904",  # raise from inside except without cause
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "N802",  # function name should be lowercase (test_* functions)
]
"benchmarks/**/*.py" = [
    "T201",  # print statements allowed in benchmarks
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["pytoon"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "tiktoken.*",
    "faker.*",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
include = ["pytoon"]
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
exclude = [
    "tests",
    "benchmarks",
    "examples",
]
